--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Katie Fenn",
   "license": "ISC",
   "devDependencies": {
-    "mocha": "~2.0.1"
+    "mocha": "~2.0.1",
+    "jshint": "~2.5.10"
   }
 }
