--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "mocha": "~2.0.1",
-    "jshint": "~2.5.10"
+    "jshint": "~2.5.10",
+    "grunt": "~0.4.5"
   }
 }
