--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "mocha": "~2.0.1",
     "jshint": "~2.5.10",
-    "grunt": "~0.4.5"
+    "grunt": "~0.4.5",
+    "grunt-contrib-watch": "~0.6.1"
   }
 }
