--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mocha": "~2.0.1",
     "jshint": "~2.5.10",
     "grunt": "~0.4.5",
-    "grunt-contrib-watch": "~0.6.1"
+    "grunt-contrib-watch": "~0.6.1",
+    "chai": "~1.10.0"
   }
 }
