--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A command-line utility for converting decial numbers to roman numerals",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/mocha/bin/mocha"
   },
   "keywords": [
     "numbers",
